kubes/infrastructure/apps/garage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-s3-ingress
  namespace: garage
spec:
  ingressClassName: traefik 
  rules:
    - host: "*.garage.garage.svc.cluster.local" 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage 
                port:
                  number: 3900
